# .ReO

./: Cargo.toml  Kaitawiri.rs  Kaiwhakahaere.rs  LICENSE  Main.rs  README.md  abc.rs  app.js  app.ts  blockchain.rs  interpretation.rs  kairuku.rs  kaitawiri.rs  kaiwhakahaere.rs  main.rs  python_interpreter.c  server.js  server.ts  test.reo
.cargo/: config.toml
Python-3.10.4/: Makefile  Makefile.pre  confdefs.h  config.status  conftest.c  pyconfig.h
Python-3.10.4/Misc/: python-config.sh  python-embed.pc  python.pc
Python-3.10.4/Modules/: ld_so_aix
docs/: README.md
src/: blockchain.rs  compile.rs  consensus.rs  crypto.rs  interpretation.rs  main.rs  manage.rs  matua.rs  network.rs  nga_toi.rs  poraka.rs  poutaka.rs  puna.rs  reo.rs  rewards.rs  test.rs  whakaaetanga.rs  whakahaere.rs  whakamatautau.rs  whatunga.rs
