[package]
name = "ReO"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
uuid = { version = "1.0", features = ["v4"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
log = "0.4"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
untrusted = "0.7"
hex = "0.4"

[[bin]]
name = "matua"
path = "src/matua.rs"


